stop-gap measures to get app up and running

--- a/main.css
+++ b/main.css
@@ -4,7 +4,27 @@ html {
 *, *:before, *:after {
     box-sizing: inherit;
 }
+.app-holder {
+    display: flex;
+}
 
+.button-holder {
+    height: 50px;
+    margin-bottom: 20px;
+}
+button {
+    margin-right: 10px;
+    border-radius: 2px;
+    border: none;
+    background: rgb(218, 169, 218);
+}
+button:focus {
+    outline: blue;
+}
+button.active {
+    border: solid;
+    border-color: blue;
+}
 .phone-outline {
     display: flex;
     flex-direction: column;
@@ -29,7 +49,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid darkgrey;
     min-height: 8%;
     height: 8%;
     min-width: 100%;
@@ -53,7 +72,41 @@ html {
     height: 5vh;
     width: 5vh;
 }
+.inside-animator {
+    width: 100%;
+    overflow: hidden;
+}
+.loading-slider {
+    height: 2px;
+    width: 10px;
+    background-color: rgb(47, 181, 226);
+    position: relative;
+    left: 0%;
+    animation: loading 4s linear infinite;
+}
+/* @keyframes loading {
+    0% {
+        transform: translate3d(0px, 0px, 0px); width: 10px;
+    }
+    25% {
+        transform: translate3d(150px, 0px, 0px); width: 100px;
+    }
+    40% {
+        transform: translate3d(300px, 0px, 0px); width: 10px;
+    }
+    65% {
+        transform: translate3d(150px, 0px, 0px); width: 100px;
+    }
+    100% {
+        transform: translate3d(0px, 0px, 0px); width: 10px;
+    }
+} */
 
+@keyframes loading {
+    0% { left: 0%; width: 10px;}
+    50% { left: 98%; width: 10px;}
+    100% { left: 0%; width: 10px;}
+}
 /* ----------------------**Bottom Panel**---------------------- */
 .bottom-panel {
     display: flex;
